Submitted posts are wrapping successfully and the page scrolls correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ h1 {
     background-color: rgb(250, 250, 250);
     font-family: 'Cinzel', sans-serif;
     border: 0.5px solid black;
-    box-shadow: inset 0 0 5px #000000;resize:
+    box-shadow: inset 0 0 5px #000000;
 }
 
 .user-nav {
@@ -111,4 +111,33 @@ input[value="Create User"]:hover, [id="log-in-submit"]:hover, [value="Post"]:hov
     font-size: 16px;
     text-decoration: underline;
     background-color: rgb(250, 250, 250);
+}
+
+.body {
+    display: flex;
+    height: 100%;
+    overflow: hidden;
+}
+
+.posts-container {
+    padding: 20px;
+    height: 80vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: auto;
+}
+
+.posts-container .post {
+    width: 20%;
+    padding: 20px;
+    margin: 10px;
+    margin-top: 50px;
+    border: 0.5px solid black;
+    box-shadow: inset 0 0 5px #000000;
+    background-color: rgb(250, 250, 250);
+}
+
+.posts-container .post img {
+    width: 100%;
 }
